--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserify": "^17.0.0",
     "connect-busboy": "0.0.2",
     "connect-history-api-fallback": "^1.6.0",
+    "cypress": "^7.5.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
